# FEDT_IDS2

./: .gitignore  CLASS_COVERAGE_STRATEGY.md  MACHINE_UNLEARNING_IMPLEMENTATION.md  fedT.proto  grid_search_rf_classif.py  how_to_run.txt  pyproject.toml  setup_windows_paths.py
env-fedt-ids/: pyvenv.cfg
fedt/: cli.py  client.py  client_utils.py  config.toml  fedT_pb2.py  fedT_pb2.pyi  fedT_pb2_grpc.py  fedforest.py  run_clients.py  server.py  settings.py  utils.py
fedtxbaselines/bkp/featureCloud-RF/: IID_aggregated_metrics.csv
fedtxbaselines/bkp/flex-trees/: IID_aggregated_metrics.csv  IID_client_metrics.csv
fedtxbaselines/featureCloud/: IID_aggregated_metrics.csv  non_iid_aggregated_metrics.csv
fedtxbaselines/featureCloud-RF/: IID_client_metrics.csv
fedtxbaselines/featureCloud/resultados_toniot/: iid_aggregated_metrics.csv  non_iid_aggregated_metrics.csv
fedtxbaselines/flex-trees/resultados_edgeiot/: iid_aggregated_metrics.csv  non_iid_aggregated_metrics.csv
fedtxbaselines/flex-trees/resultados_toniot/: iid_aggregated_metrics.csv  non_iid_aggregated_metrics.csv
logs/cpu_ram/best_trees/: cpu_and_ram_yuri_best_trees_0.json
neural_network_training/: train_federated_nn.py  train_federated_nn_fedavg_6layers_600.py
neural_network_training/fedt_nn_flower_app/: README.md  pyproject.toml  verify_config.py
neural_network_training/fedt_nn_flower_app/my_simulation/: client_app.py  server_app.py  task.py
neural_network_training/redes_neurais_antigas/: plot_nn_metrics.py  train_federated_nn_fedavg_6layers_600_fixed.py  train_federated_nn_single_actor.py
neural_network_training/run_20260303_194549_seed42/: round_metrics.json  schema.json
scripts/: comparison_fedt_baselines.py  cpu_and_ram_monitor.py  graficos_edgeiot.py  graficos_edgeiot_20rounds.py  graficos_id_edgeiiots.py  graficos_ids.py  graficos_ids_20rounds.py  graficos_ids_toniot.py  graficos_unlearning.py  graphics.py  graphics2.py  graphics3.py  graphics_aux.py  graphics_ciciot.py  graphics_edgeiot.py  graphics_style.py  graphics_toniot.py  network_monitor  network_monitor.py  pcap_filter  pcap_filter.py
scripts/bkp/: graficos_toniot.py
(+240 files in other folders)
