[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my_simulation"
version = "1.0.0"
description = "Flower + PyTorch app for tabular multi-class classification with per-client round logs"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.20.0",
    "torch>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.23.0",
    "scikit-learn>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["my_simulation"]

[tool.flwr.app]
publisher = "yuri"

[tool.flwr.app.components]
serverapp = "my_simulation.server_app:app"
clientapp = "my_simulation.client_app:app"

# You can override these at runtime via `flwr run . --run-config ...`
[tool.flwr.app.config]
num-server-rounds = 40
fraction-fit = 1.0
local-epochs = 1
label-col = "Attack_type_6"

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
# IMPORTANT: set this to match how many `client_*` folders exist in your DATA_ROOT
options.num-supernodes = 10
# Resource limits to reduce parallelism (helps prevent RAM OOM)
options.backend.client-resources.num-cpus = 2
options.backend.client-resources.num-gpus = 0.0
options.backend.init-args.num-cpus = 2
